Fixed page so that it resizes properly on mobile.

--- a/public/style.css
+++ b/public/style.css
@@ -52,12 +52,12 @@
 	margin-top: 1px;
 	position: absolute;
 	display: block;
-	width: 80%;
+	width: 70%;
 	outline: none;
 }
 
 #submit{
-	width: 20%;
+	width: 30%;
 	float: right;
 	font-size: 150%;
 	height: 70px;
